===v4.5.6===
 * Moved the default icon type into its own type file, because it technically is nothing more than another icon type.
 * Added clarification for icon types that will accept no name to check everything.
 * Added a help popup for the stop watch icon.
 * You can now right-click an entry in the suggestion list to insert the opposite type of what is being typed in.
 * Bug Fixes:
 ** Implemented a method to determine if an export string has become corrupt due to the source's formatting
 ** Fixed overlay bar frame levels
 
===v4.5.5===
 * Added Brazillian Portuguese localization file. Translators wanted!
 * Implemented a method of determining of an import string has become corrupt by using WikiCreole formatting on Curse (and then fix it if it has been).
 * Bug Fixes:
 ** (r213) The cooldown bar offset editbox now uses TellMeWhen_TimeEditBoxTemplate (and on a related note, huge time strings will now format to the year level for fun)

===v4.5.4===
 * New icon type: Rune Cooldown. Does what you would expect it to do.
 * Re-implemented the "Only in Combat" option for groups (since it is such a common option, having it only as a condition is a bit tricky for new users to figure out).
 * Bug Fixes:
 ** (r210) Fixed frame levels that I broke in the last revision of 4.5.3.
 
===v4.5.3===
 * Improved configurations for units. Leaving the red '#' in will now default the unit to its full range, and there is now a tooltip showing all units being checked when holding down a modifier key, similar to the name editbox.
 * Added a new option to condition icons: "Only show if timer is active". If enabled, forces the icon to be hidden if there is not an active timer on the icon.
 * Updated Masque/ButtonFacade code again.
 * Bug Fixes:
 ** (r196) I accidentally commented out the fix for the error 132 crash. Oops.
 ** (r196) Updated for Masque r366
 ** (r197) TellMeWhen_Options-r196.lua:3863: attempt to index global "info" (a nil value)