@@ -4,8 +4,9 @@
  * Added a help popup for the stop watch icon.
  * You can now right-click an entry in the suggestion list to insert the opposite type of what is being typed in.
  * Bug Fixes:
- ** Implemented a method to determine if an export string has become corrupt due to the source's formatting
- ** Fixed overlay bar frame levels
+ ** (r219) Implemented a method to determine if an export string has become corrupt due to the source's formatting
+ ** (r220) Fixed overlay bar frame levels
+ ** (r226) Dispel types should now work regardless of capitalization
  
 ===v4.5.5===
  * Added Brazillian Portuguese localization file. Translators wanted!
